added hover effects and additional spacing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <form class="login-form grid-center">
       <h1 class="form-title bold">Login into your account</h1>
       <div class="input-fields grid-center">
-        <div class="input-field email">
+        <div class="input-field email" tabindex="0">
           <label for="email" class="icon email-icon">
             <img src="./assets/email-icon.png" alt="email icon" />
           </label>
